# 02prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: mod.rs
src/domain/: subscriber_email.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirms.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/login/: post.rs
tests/: health_check.rs
tests/api/: helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirms.rs
